--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 15:05:04 2018</p>
+         Last Run: Sun Jul 15 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -58,10 +58,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>SE</td>
+                        <td>14</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
+                 "21",
                  "24",
-                 "29"
+                 "28"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 15:05:04 2018</p>
+         Last Run: Sun Jul 15 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -257,12 +257,12 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>48</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>49</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
+                 "39",
                  "47",
-                 "49"
+                 "50"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 15:05:04 2018</p>
+         Last Run: Sun Jul 15 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,24 +433,24 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>44</td>
-                        <td>50</td>
+                        <td>46</td>
+                        <td>51</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>6</td>
-                        <td>52</td>
+                        <td>7</td>
+                        <td>53</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>54</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -462,19 +462,19 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
-                 "6",
+                 "46",
+                 "7",
                  "9",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -597,8 +597,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "52",
+                 "51",
+                 "53",
                  "53",
                  "56"
                ]
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
                  "54",
-                 "57",
-                 "57"
+                 "52",
+                 "56",
+                 "58"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 15:05:04 2018</p>
+         Last Run: Sun Jul 15 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
