--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 17:05:17 2018</p>
+         Last Run: Sun Jul 15 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -58,9 +58,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>0</td>
                      </tr>
@@ -182,7 +182,7 @@
                "data":[
                  "22",
                  "24",
-                 "29"
+                 "30"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 17:05:17 2018</p>
+         Last Run: Sun Jul 15 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>41</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -250,7 +250,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>45</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -262,7 +262,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>48</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "45",
-                 "48"
+                 "42",
+                 "44",
+                 "46"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 17:05:17 2018</p>
+         Last Run: Sun Jul 15 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -431,14 +431,14 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>44</td>
-                        <td>50</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>46</td>
+                        <td>51</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -446,11 +446,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>6</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -470,11 +470,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>5</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>57</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -586,7 +586,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
+                 "46",
                  "6",
                  "9",
                  "5"
@@ -597,10 +597,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "52",
+                 "51",
                  "53",
-                 "55"
+                 "53",
+                 "56"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "54",
                  "53",
-                 "52",
                  "57",
-                 "57"
+                 "59"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 17:05:17 2018</p>
+         Last Run: Sun Jul 15 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -649,63 +649,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>Clear</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>52</td>
                         <td>3</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>30</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>0</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>2</td>
                         <td>47</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>36</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>3</td>
+                        <td>5</td>
                         <td>43</td>
                         <td>6</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>40</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>3</td>
-                        <td>41</td>
+                        <td>5</td>
+                        <td>40</td>
                         <td>7</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>41</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>4</td>
-                        <td>40</td>
+                        <td>6</td>
+                        <td>39</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>41</td>
+                        <td>NW</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -751,8 +751,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
                  "18",
+                 "19",
                  "20",
                  "21",
                  "22"
@@ -764,8 +764,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
                  "18",
+                 "19",
                  "20",
                  "21",
                  "22"
@@ -822,10 +822,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "3",
-                 "3",
-                 "4"
+                 "2",
+                 "5",
+                 "5",
+                 "6"
                ]
              },
              {
@@ -836,8 +836,8 @@
                  "52",
                  "47",
                  "43",
-                 "41",
-                 "40"
+                 "40",
+                 "39"
                ]
              },
              {
@@ -845,11 +845,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "36",
-                 "40",
-                 "41",
-                 "41"
+                 "26",
+                 "33",
+                 "37",
+                 "38",
+                 "40"
                ]
              }
            ]
