--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 18:05:10 2018</p>
+         Last Run: Sun Jul 15 19:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -58,10 +58,10 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -182,7 +182,7 @@
                "data":[
                  "22",
                  "24",
-                 "30"
+                 "29"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 18:05:10 2018</p>
+         Last Run: Sun Jul 15 19:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>42</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -248,21 +248,21 @@
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>44</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>2</td>
-                        <td>45</td>
+                        <td>1</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>46</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "35",
                  "39",
-                 "45"
+                 "47"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
-                 "44",
-                 "46"
+                 "52",
+                 "51",
+                 "51"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 18:05:10 2018</p>
+         Last Run: Sun Jul 15 19:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -431,50 +431,50 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>46</td>
-                        <td>51</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>43</td>
+                        <td>50</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>54</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>6</td>
-                        <td>53</td>
+                        <td>2</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>53</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>9</td>
-                        <td>53</td>
+                        <td>36</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>5</td>
-                        <td>56</td>
+                        <td>8</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>59</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "23",
                  "22",
                  "22",
                  "21"
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "23",
                  "22",
                  "22",
                  "21"
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "46",
-                 "6",
-                 "9",
-                 "5"
+                 "43",
+                 "2",
+                 "36",
+                 "8"
                ]
              },
              {
@@ -597,10 +597,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "50",
                  "51",
-                 "53",
-                 "53",
-                 "56"
+                 "52",
+                 "55"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "53",
-                 "57",
-                 "59"
+                 "50",
+                 "43",
+                 "58",
+                 "60"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 18:05:10 2018</p>
+         Last Run: Sun Jul 15 19:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
