--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 20:05:16 2018</p>
+         Last Run: Sun Jul 15 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -49,7 +49,7 @@
                         <td>24</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 20:05:16 2018</p>
+         Last Run: Sun Jul 15 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -236,7 +236,7 @@
                         <td>0</td>
                         <td>34</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>E</td>
                         <td>52</td>
                      </tr>
@@ -248,7 +248,7 @@
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>E</td>
                         <td>51</td>
                      </tr>
@@ -257,12 +257,12 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>1</td>
-                        <td>46</td>
+                        <td>2</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -382,7 +382,7 @@
                "data":[
                  "34",
                  "39",
-                 "46"
+                 "45"
                ]
              },
              {
@@ -392,7 +392,7 @@
                "data":[
                  "52",
                  "51",
-                 "51"
+                 "52"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 20:05:16 2018</p>
+         Last Run: Sun Jul 15 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -431,8 +431,8 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>43</td>
                         <td>50</td>
                         <td>3</td>
@@ -446,11 +446,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>43</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -458,7 +458,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>37</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -469,7 +469,7 @@
                         <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>55</td>
                         <td>0</td>
                         <td>14</td>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "23",
                  "22",
                  "22",
                  "21"
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "23",
                  "22",
                  "22",
                  "21"
@@ -589,7 +589,7 @@
                  "43",
                  "2",
                  "37",
-                 "8"
+                 "10"
                ]
              },
              {
@@ -598,8 +598,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
+                 "51",
                  "52",
-                 "53",
                  "55"
                ]
              },
@@ -609,7 +609,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "43",
+                 "45",
                  "58",
                  "60"
                ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 20:05:16 2018</p>
+         Last Run: Sun Jul 15 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
